feat(spec 00017 P2): retire deprecated new URL(String) + fix hand-written unchecked
Behavior-touching deprecation removals (Scope A, phase 2):

new URL(String) -> URI conversion (12 sites):
- add Files.toUrl(String): new URI(s).toURL() with a File fallback for
  relative/space-bearing paths, preserving the leniency of new URL(String);
  toUrls() now delegates to it (+ unit tests for the fallback)
- file-path sites route through toUrl: NavigationFormatParser (x2),
  RecentUrlsModel, DeleteRoutes, LocalRoute, LocalRouteDistanceAndTimeFiller
- controlled http/config sites use URI.create(s).toURL(): ApplicationContext,
  TileServerMapSource, BrowsePanel, ClassPathExtender (custom jarinjar: scheme)
- LocalCategory collapses new URL(href).toURI() to new URI(href)

commons-cli 1.11.0 in the two remaining tools missed in P1:
  CheckProxy, FilterResourceBundles (build() -> get(); help.HelpFormatter)

real unchecked warnings (per-site):
- PhotoPanel: build the filter-predicate model via addElement (no generic
  array); type the FilterPredicate<NavigationPosition> locals
- ConvertPanel: narrow @SuppressWarnings to the FormatAndRoutesModel
  assignment (raw ComboBoxModel base cascades into out-of-scope rawtypes)
- BaseRoute.sort: @SuppressWarnings on the P[] toArray cast

Out of scope (documented): IntelliJ $$$setupUI$$$-generated JComboBox
unchecked, pre-existing FileOperations unchecked, JAXB codegen locale,
rawtypes/serial/this-escape.